--- a/index.html
+++ b/index.html
@@ -1,13 +1,6 @@
 ---
 layout: default
-title: Your New Jekyll Site
+title: Chris Riebschlager - Processing Sketches
 ---
 
-<div id="home">
-  <h1>Oh. Hello.</h1>
-  <ul class="posts">
-    {% for post in site.posts %}
-      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
-    {% endfor %}
-  </ul>
-</div>
+Projects!
