--- a/index.html
+++ b/index.html
@@ -2,5 +2,189 @@
 layout: default
 title: Chris Riebschlager - Processing Sketches
 ---
-
-Projects!
+<h1>Lorem ipsum dolor.</h1>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quae, dolore autem est temporibus tempora quas. Qui, numquam, vero quod provident tempore necessitatibus incidunt eius doloremque consectetur sint illum rerum reiciendis!</p>
+<div class="row">
+  <div class="col-sm-4">
+    <img class="thumbnail img-responsive" src="http://placehold.it/600x600" alt="">
+    <h3>
+      <a href="http://github.com/riebschlager/attraction-repulsion">Name</a>
+    </h3>
+    <p>Desc</p>
+  </div>
+  <div class="col-sm-4">
+    <img class="thumbnail img-responsive" src="http://placehold.it/600x600" alt="">
+    <h3>
+      <a href="http://github.com/riebschlager/attraction-repulsion-typography">Name</a>
+    </h3>
+    <p>Desc</p>
+  </div>
+  <div class="col-sm-4">
+    <img class="thumbnail img-responsive" src="http://placehold.it/600x600" alt="">
+    <h3>
+      <a href="http://github.com/riebschlager/circle-slice">Name</a>
+    </h3>
+    <p>Desc</p>
+  </div>
+  <div class="col-sm-4">
+    <img class="thumbnail img-responsive" src="http://placehold.it/600x600" alt="">
+    <h3>
+      <a href="http://github.com/riebschlager/connections">Name</a>
+    </h3>
+    <p>Desc</p>
+  </div>
+  <div class="col-sm-4">
+    <img class="thumbnail img-responsive" src="http://placehold.it/600x600" alt="">
+    <h3>
+      <a href="http://github.com/riebschlager/dotography">Name</a>
+    </h3>
+    <p>Desc</p>
+  </div>
+  <div class="col-sm-4">
+    <img class="thumbnail img-responsive" src="http://placehold.it/600x600" alt="">
+    <h3>
+      <a href="http://github.com/riebschlager/draw-by-attraction">Name</a>
+    </h3>
+    <p>Desc</p>
+  </div>
+  <div class="col-sm-4">
+    <img class="thumbnail img-responsive" src="http://placehold.it/600x600" alt="">
+    <h3>
+      <a href="http://github.com/riebschlager/face-particles">Name</a>
+    </h3>
+    <p>Desc</p>
+  </div>
+  <div class="col-sm-4">
+    <img class="thumbnail img-responsive" src="http://placehold.it/600x600" alt="">
+    <h3>
+      <a href="http://github.com/riebschlager/fingerprint-portrait">Name</a>
+    </h3>
+    <p>Desc</p>
+  </div>
+  <div class="col-sm-4">
+    <img class="thumbnail img-responsive" src="http://placehold.it/600x600" alt="">
+    <h3>
+      <a href="http://github.com/riebschlager/flickr-by-color">Name</a>
+    </h3>
+    <p>Desc</p>
+  </div>
+  <div class="col-sm-4">
+    <img class="thumbnail img-responsive" src="http://placehold.it/600x600" alt="">
+    <h3>
+      <a href="http://github.com/riebschlager/furballs">Name</a>
+    </h3>
+    <p>Desc</p>
+  </div>
+  <div class="col-sm-4">
+    <img class="thumbnail img-responsive" src="http://placehold.it/600x600" alt="">
+    <h3>
+      <a href="http://github.com/riebschlager/haystacks">Name</a>
+    </h3>
+    <p>Desc</p>
+  </div>
+  <div class="col-sm-4">
+    <img class="thumbnail img-responsive" src="http://placehold.it/600x600" alt="">
+    <h3>
+      <a href="http://github.com/riebschlager/lava-lamp">Name</a>
+    </h3>
+    <p>Desc</p>
+  </div>
+  <div class="col-sm-4">
+    <img class="thumbnail img-responsive" src="http://placehold.it/600x600" alt="">
+    <h3>
+      <a href="http://github.com/riebschlager/neobrush">Name</a>
+    </h3>
+    <p>Desc</p>
+  </div>
+  <div class="col-sm-4">
+    <img class="thumbnail img-responsive" src="http://placehold.it/600x600" alt="">
+    <h3>
+      <a href="http://github.com/riebschlager/neobrush-leap">Name</a>
+    </h3>
+    <p>Desc</p>
+  </div>
+  <div class="col-sm-4">
+    <img class="thumbnail img-responsive" src="http://placehold.it/600x600" alt="">
+    <h3>
+      <a href="http://github.com/riebschlager/noise-haystack">Name</a>
+    </h3>
+    <p>Desc</p>
+  </div>
+  <div class="col-sm-4">
+    <img class="thumbnail img-responsive" src="http://placehold.it/600x600" alt="">
+    <h3>
+      <a href="http://github.com/riebschlager/particle-trees">Name</a>
+    </h3>
+    <p>Desc</p>
+  </div>
+  <div class="col-sm-4">
+    <img class="thumbnail img-responsive" src="http://placehold.it/600x600" alt="">
+    <h3>
+      <a href="http://github.com/riebschlager/particle-vector-scatter">Name</a>
+    </h3>
+    <p>Desc</p>
+  </div>
+  <div class="col-sm-4">
+    <img class="thumbnail img-responsive" src="http://placehold.it/600x600" alt="">
+    <h3>
+      <a href="http://github.com/riebschlager/pixel-drive">Name</a>
+    </h3>
+    <p>Desc</p>
+  </div>
+  <div class="col-sm-4">
+    <img class="thumbnail img-responsive" src="http://placehold.it/600x600" alt="">
+    <h3>
+      <a href="http://github.com/riebschlager/pixel-plaids">Name</a>
+    </h3>
+    <p>Desc</p>
+  </div>
+  <div class="col-sm-4">
+    <img class="thumbnail img-responsive" src="http://placehold.it/600x600" alt="">
+    <h3>
+      <a href="http://github.com/riebschlager/polygon-smooth">Name</a>
+    </h3>
+    <p>Desc</p>
+  </div>
+  <div class="col-sm-4">
+    <img class="thumbnail img-responsive" src="http://placehold.it/600x600" alt="">
+    <h3>
+      <a href="http://github.com/riebschlager/sketch-portrait">Name</a>
+    </h3>
+    <p>Desc</p>
+  </div>
+  <div class="col-sm-4">
+    <img class="thumbnail img-responsive" src="http://placehold.it/600x600" alt="">
+    <h3>
+      <a href="http://github.com/riebschlager/sliver-slice">Name</a>
+    </h3>
+    <p>Desc</p>
+  </div>
+  <div class="col-sm-4">
+    <img class="thumbnail img-responsive" src="http://placehold.it/600x600" alt="">
+    <h3>
+      <a href="http://github.com/riebschlager/time-lapse">Name</a>
+    </h3>
+    <p>Desc</p>
+  </div>
+  <div class="col-sm-4">
+    <img class="thumbnail img-responsive" src="http://placehold.it/600x600" alt="">
+    <h3>
+      <a href="http://github.com/riebschlager/vector-noise-swirl">Name</a>
+    </h3>
+    <p>Desc</p>
+  </div>
+  <div class="col-sm-4">
+    <img class="thumbnail img-responsive" src="http://placehold.it/600x600" alt="">
+    <h3>
+      <a href="http://github.com/riebschlager/windout">Name</a>
+    </h3>
+    <p>Desc</p>
+  </div>
+  <div class="col-sm-4">
+    <img class="thumbnail img-responsive" src="http://placehold.it/600x600" alt="">
+    <h3>
+      <a href="http://github.com/riebschlager/windout-js">Name</a>
+    </h3>
+    <p>Desc</p>
+  </div>
+</div>
