--- a/index.html
+++ b/index.html
@@ -3,6 +3,18 @@ layout: default
 title: Chris Riebschlager - Processing Sketches
 ---
 <h1>Chris Riebschlager &mdash; Processing Sketches</h1>
+<h4>
+  <a href="http://github.com/riebschlager">
+    <i class="fa fa-github"></i>&nbsp;Github
+  </a>&nbsp;&nbsp;
+  <a href="http://the816.com">
+    <i class="fa fa-external-link"></i>&nbsp;Website
+  </a>&nbsp;&nbsp;
+  <a href="mailto:chris@the816.com">
+    <i class="fa fa-envelope-o"></i>&nbsp;Email
+  </a>
+</h4>
+<hr>
 <div class="row">
   <div class="col-sm-6 col-md-4">
     <img class="img-responsive" src="https://dl.dropboxusercontent.com/u/3308391/riebschlager.github.io/attraction-repulsion.jpg" alt="">
